# cairomm

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README  cairommconfig.h.in  cairommconfig.h.meson  configure.ac  meson.build  meson_options.txt
MSVC_NMake/: Makefile.vc  README  build-rules-msvc.mak  cairomm-build-defines.props  cairomm.sln  config-msvc.mak  create-lists-msvc.mak  detectenv-msvc.mak  filelist.am  generate-msvc.mak  install.mak  svg-surface.vcxproj  text-rotate.vcxproj  user-font.vcxproj
MSVC_Net2017/: cairomm-version-paths.props  cairomm.vcxproj  filelist.am  gendef.vcxproj  image-surface.vcxproj  pdf-surface.vcxproj  ps-surface.vcxproj  toy-text.vcxproj
cairomm/: context.cc  context.h  enums.h  exception.h  fontface.cc  fontface.h  fontoptions.cc  fontoptions.h  meson.build  pattern.cc  pattern.h  surface.cc  surface.h
data/: cairomm.pc.in  meson.build
docs/reference/: Doxyfile.in  meson.build
examples/: meson.build
examples/surfaces/: image-surface.cc
examples/text/: text-rotate.cc  toy-text.cc  user-font.cc
tests/: meson.build  test-context.cc  test-font-face.cc  test-font-options.cc  test-matrix.cc  test-scaled-font.cc  test-surface.cc  test-user-font.cc
tools/: doc-publish.sh  release-publish.sh
untracked/: README
